[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/popups/PracticeDonePopup.gd" type="Script" id=2]
[ext_resource path="res://ui/theme/fonts/font_well_done_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/theme/fonts/font_well_done_normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/theme/button_outline_large_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/theme/button_outline_large_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/theme/button_outline_large_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/screens/practice/gdquestboy_logo.png" type="Texture" id=9]
[ext_resource path="res://ui/theme/focus_accent.tres" type="StyleBox" id=10]
[ext_resource path="res://ui/screens/practice/gdquestboy_frame.tres" type="StyleBox" id=11]
[ext_resource path="res://ui/theme/fonts/font_well_done_bold.tres" type="DynamicFont" id=12]
[ext_resource path="res://ui/theme/button_outline_large_accent.tres" type="StyleBox" id=13]

[node name="PracticeDonePopup" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.0352941, 0.0392157, 0.129412, 0.627451 )
script = ExtResource( 2 )

[node name="Layout" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -202.5
margin_right = 310.0
margin_bottom = 202.5
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellDoneAnchors" type="Control" parent="Layout"]
margin_right = 600.0
margin_bottom = 405.0
rect_min_size = Vector2( 600, 405 )
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="Layout/WellDoneAnchors"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 405 )

[node name="Panel" type="Panel" parent="Layout/WellDoneAnchors/PanelContainer"]
margin_right = 600.0
margin_bottom = 405.0
custom_styles/panel = ExtResource( 7 )

[node name="Layout" type="VBoxContainer" parent="Layout/WellDoneAnchors/PanelContainer"]
margin_right = 600.0
margin_bottom = 405.0
custom_constants/separation = 0

[node name="ProgressBar" type="ProgressBar" parent="Layout/WellDoneAnchors/PanelContainer/Layout"]
margin_right = 600.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
value = 100.0
percent_visible = false

[node name="Margin" type="MarginContainer" parent="Layout/WellDoneAnchors/PanelContainer/Layout"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 402.0

[node name="Column" type="VBoxContainer" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 366.0
custom_constants/separation = 20

[node name="Spacer" type="Control" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column"]
margin_right = 560.0
margin_bottom = 8.0
rect_min_size = Vector2( 400, 8 )

[node name="Title" type="Label" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column"]
margin_top = 28.0
margin_right = 560.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "Well done!"
align = 1

[node name="Summary" type="Label" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column"]
margin_top = 100.0
margin_right = 560.0
margin_bottom = 136.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "You completed the practice."
align = 1
autowrap = true

[node name="Summary2" type="RichTextLabel" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column"]
margin_top = 156.0
margin_right = 560.0
margin_bottom = 230.0
size_flags_vertical = 0
custom_fonts/bold_font = ExtResource( 12 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][b]Stay[/b] and play around,
or [b]continue[/b] the course.[/center]"
text = "Stay and play around,
or continue the course."
fit_content_height = true

[node name="Spacer2" type="Control" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column"]
margin_top = 250.0
margin_right = 560.0
margin_bottom = 258.0
rect_min_size = Vector2( 400, 8 )

[node name="Buttons" type="HBoxContainer" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column"]
margin_top = 278.0
margin_right = 560.0
margin_bottom = 346.0
alignment = 1

[node name="StayButton" type="Button" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column/Buttons"]
margin_left = 72.0
margin_right = 272.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../MoveOnButton")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../MoveOnButton")
focus_previous = NodePath(".")
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
text = "Stay"

[node name="MoveOnButton" type="Button" parent="Layout/WellDoneAnchors/PanelContainer/Layout/Margin/Column/Buttons"]
margin_left = 288.0
margin_right = 488.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
focus_neighbour_left = NodePath("../StayButton")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../StayButton")
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_colors/font_color_hover = Color( 0.239216, 1, 0.431373, 1 )
custom_colors/font_color_pressed = Color( 0.239216, 1, 0.431373, 1 )
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
text = "Continue"

[node name="GameAnchors" type="Control" parent="Layout"]
margin_left = 620.0
margin_right = 620.0
margin_bottom = 405.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameContainer" type="PanelContainer" parent="Layout/GameAnchors"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Layout/GameAnchors/GameContainer"]
margin_left = 38.0
margin_top = 84.0
margin_right = 249.0
margin_bottom = 353.544
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 60
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="Layout/GameAnchors/GameContainer/MarginContainer"]
margin_right = 211.0
margin_bottom = 209.0
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="TextureRect" parent="Layout/GameAnchors/GameContainer"]
margin_left = 38.0
margin_top = 305.544
margin_right = 249.0
margin_bottom = 353.544
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 8
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
